Add cypress testing

--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     ]
   },
   "proxy": "http://localhost:3080",
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "cypress": "^13.8.0"
+  }
 }
